--- a/ImageGallery/Base.lproj/Main.storyboard
+++ b/ImageGallery/Base.lproj/Main.storyboard
@@ -1,107 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3mx-Rw-nar">
-    <device id="ipad9_7" orientation="landscape">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YFw-vY-iUy">
+    <device id="ipad12_9rounded" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Image Gallery Document Table View Controller-->
-        <scene sceneID="Sgu-qj-0QZ">
+        <!--Image View Controller-->
+        <scene sceneID="QX5-JI-ykc">
             <objects>
-                <tableViewController id="ytj-AH-2oC" customClass="ImageGalleryDocumentTableViewController" customModule="ImageGallery" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="wiA-7m-3wx">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="768"/>
+                <viewController id="YFw-vY-iUy" customClass="ImageViewController" customModule="ImageGallery" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iPM-JA-dkm">
+                        <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LuC-vT-qql">
+                                <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ytr-rG-zg1">
-                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ytr-rG-zg1" id="rGf-Id-UU7">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="ytj-AH-2oC" id="93e-fp-RJg"/>
-                            <outlet property="delegate" destination="ytj-AH-2oC" id="S1L-V4-0SV"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="quC-tY-HdU"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lnH-Tu-1MY" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="660" y="-298"/>
-        </scene>
-        <!--Collection View Controller-->
-        <scene sceneID="CM8-o9-5KM">
-            <objects>
-                <collectionViewController id="5j3-tE-rP8" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="hsX-fI-MjB">
-                        <rect key="frame" x="0.0" y="0.0" width="703.5" height="768"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="EcQ-bt-4hK">
-                            <size key="itemSize" width="50" height="50"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="lmi-2F-LI4">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </view>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="5j3-tE-rP8" id="nPt-Sb-Wgi"/>
-                            <outlet property="delegate" destination="5j3-tE-rP8" id="IeR-cz-cOg"/>
-                        </connections>
-                    </collectionView>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gNN-td-cRZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-88" y="552"/>
-        </scene>
-        <!--Split View Controller-->
-        <scene sceneID="7Ce-qj-OIc">
-            <objects>
-                <splitViewController id="3mx-Rw-nar" sceneMemberID="viewController">
+                        <constraints>
+                            <constraint firstItem="LuC-vT-qql" firstAttribute="top" secondItem="iPM-JA-dkm" secondAttribute="top" id="Ixk-hf-DsC"/>
+                            <constraint firstItem="LuC-vT-qql" firstAttribute="leading" secondItem="iPM-JA-dkm" secondAttribute="leading" id="Xfo-lJ-Ayp"/>
+                            <constraint firstAttribute="trailing" secondItem="LuC-vT-qql" secondAttribute="trailing" id="gmv-8p-UjQ"/>
+                            <constraint firstItem="LuC-vT-qql" firstAttribute="bottom" secondItem="iPM-JA-dkm" secondAttribute="bottom" id="nar-SU-nV6"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="qBx-lD-dsf"/>
+                    </view>
                     <connections>
-                        <segue destination="5j3-tE-rP8" kind="relationship" relationship="detailViewController" id="6vx-LT-xrY"/>
-                        <segue destination="gSr-Po-EeY" kind="relationship" relationship="masterViewController" id="erc-8m-a9I"/>
+                        <outlet property="scrollView" destination="LuC-vT-qql" id="pg3-U0-qgE"/>
                     </connections>
-                </splitViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="kDJ-ar-Ujj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hx1-9o-jdq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-842" y="70"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Zyp-cr-kfP">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gSr-Po-EeY" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yqr-bA-BWE">
-                        <rect key="frame" x="0.0" y="20" width="320" height="50"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="ytj-AH-2oC" kind="relationship" relationship="rootViewController" id="vEW-Ti-YL3"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9v0-vw-gGi" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-88" y="-297"/>
+            <point key="canvasLocation" x="-82.137628111273784" y="-35.15625"/>
         </scene>
     </scenes>
 </document>
