--- a/ImageGallery/Base.lproj/Main.storyboard
+++ b/ImageGallery/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                 <splitViewController id="f4G-Pa-Xn3" sceneMemberID="viewController">
                     <connections>
                         <segue destination="PBD-Ck-yyn" kind="relationship" relationship="masterViewController" id="Mrl-1d-MIa"/>
-                        <segue destination="RHI-X0-qK7" kind="relationship" relationship="detailViewController" id="g9N-1q-Yqm"/>
+                        <segue destination="w6j-jl-zg8" kind="relationship" relationship="detailViewController" id="WYt-nn-XML"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FYM-TE-ESv" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -49,7 +49,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="RHI-X0-qK7" kind="showDetail" identifier="ShowImageSegue" id="GVJ-rZ-e68"/>
+                                    <segue destination="w6j-jl-zg8" kind="showDetail" identifier="ShowCollectionSegue" id="mCb-Pj-Qnk"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -69,6 +69,57 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MO3-Qo-FHl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="611.85944363103954" y="-755.2734375"/>
+        </scene>
+        <!--Image Gallery Collection View Controller-->
+        <scene sceneID="nmc-GD-uPn">
+            <objects>
+                <collectionViewController id="oeV-37-xLq" customClass="ImageGalleryCollectionViewController" customModule="ImageGallery" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="jCq-uO-DMA">
+                        <rect key="frame" x="0.0" y="0.0" width="990.5" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="IxK-YV-2m9">
+                            <size key="itemSize" width="800" height="800"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" reuseIdentifier="collectionCell" id="ir9-RU-NHQ" customClass="IGCollectionViewCell" customModule="ImageGallery" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="65" width="800" height="800"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="800" height="800"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="z8U-bO-z32">
+                                            <rect key="frame" x="0.0" y="0.0" width="800" height="800"/>
+                                        </imageView>
+                                    </subviews>
+                                </view>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="z8U-bO-z32" firstAttribute="top" secondItem="ir9-RU-NHQ" secondAttribute="top" id="6DJ-5G-rcf"/>
+                                    <constraint firstItem="z8U-bO-z32" firstAttribute="leading" secondItem="ir9-RU-NHQ" secondAttribute="leading" id="Dki-cx-lzV"/>
+                                    <constraint firstAttribute="trailing" secondItem="z8U-bO-z32" secondAttribute="trailing" id="kEd-48-rk5"/>
+                                    <constraint firstAttribute="bottom" secondItem="z8U-bO-z32" secondAttribute="bottom" id="sEi-eZ-2oh"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="imageView" destination="z8U-bO-z32" id="sj7-fg-342"/>
+                                    <segue destination="RHI-X0-qK7" kind="showDetail" identifier="ShowImageView" id="lUa-8N-Ce4"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="oeV-37-xLq" id="Zr7-PO-AW2"/>
+                            <outlet property="delegate" destination="oeV-37-xLq" id="wVt-P6-IDI"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="6a0-8C-Vfd"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pZG-tj-Bva" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="611.85944363103954" y="-35.15625"/>
         </scene>
         <!--Image View Controller-->
         <scene sceneID="QX5-JI-ykc">
@@ -105,7 +156,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hx1-9o-jdq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="611.85944363103954" y="-35.15625"/>
+            <point key="canvasLocation" x="1902" y="-35"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="SDq-NR-YPd">
@@ -141,10 +192,28 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LFV-I1-l3R" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-82.137628111273784" y="-35.15625"/>
+            <point key="canvasLocation" x="1261" y="-35"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="frx-HQ-OzF">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="w6j-jl-zg8" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iPC-k4-ac2">
+                        <rect key="frame" x="0.0" y="24" width="990.5" height="50"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="oeV-37-xLq" kind="relationship" relationship="rootViewController" id="7i3-21-5j3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qSn-wr-A6L" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-82" y="-41"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="GVJ-rZ-e68"/>
+        <segue reference="mCb-Pj-Qnk"/>
     </inferredMetricsTieBreakers>
 </document>
