--- a/ImageGallery/Base.lproj/Main.storyboard
+++ b/ImageGallery/Base.lproj/Main.storyboard
@@ -95,6 +95,11 @@
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="z8U-bO-z32">
                                             <rect key="frame" x="0.0" y="0.0" width="800" height="800"/>
                                         </imageView>
+                                        <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="JVa-xr-6D4">
+                                            <rect key="frame" x="-95.5" y="-112" width="990.5" height="1024"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <color key="color" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </activityIndicatorView>
                                     </subviews>
                                 </view>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -106,6 +111,7 @@
                                 </constraints>
                                 <connections>
                                     <outlet property="imageView" destination="z8U-bO-z32" id="sj7-fg-342"/>
+                                    <outlet property="spinner" destination="JVa-xr-6D4" id="8PJ-ru-BQh"/>
                                     <segue destination="RHI-X0-qK7" kind="showDetail" identifier="ShowImageView" id="lUa-8N-Ce4"/>
                                 </connections>
                             </collectionViewCell>
@@ -214,6 +220,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="mCb-Pj-Qnk"/>
+        <segue reference="WYt-nn-XML"/>
     </inferredMetricsTieBreakers>
 </document>
